# mcp-google-sheets

./: pyproject.toml
src/mcp_google_sheets/: server.py
